--- a/serenity.properties
+++ b/serenity.properties
@@ -1,2 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 serenity.project.name=Serenity and JUnit Quick Start Project
-serenity.test.root=starter
+serenity.test.root=com.example.e2e
+
