browser based checks base

--- a/serenity.properties
+++ b/serenity.properties
@@ -2,3 +2,4 @@
 serenity.project.name=Serenity and JUnit Quick Start Project
 serenity.test.root=com.example.e2e
 
+serenity.take.screenshots=DISABLED
