--- a/serenity.properties
+++ b/serenity.properties
@@ -1,6 +1,6 @@
 # suppress inspection "UnusedProperty" for whole file
 serenity.project.name=ATDD Game Dev
 serenity.test.root=com.example.e2e
-
+serenity.include.actor.name.in.consequences=true
 serenity.logging=VERBOSE
 serenity.console.headings=none
