--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
       #    background: true
 
       # run tests!
-      - run: mvn verify -DMAILOSAUR_API_KEY=$MAILOSAUR_API_KEY
+      - run: mvn -o verify -DMAILOSAUR_API_KEY=$MAILOSAUR_API_KEY
 
       - store_test_results:
           path: target/failsafe-reports
@@ -49,7 +49,7 @@ jobs:
           destination: serenity
 
       - slack/status:
-          fail_only: true
+          fail_only: false
           mentions: 'globalworming'
           failure_message: ""
           webhook: $SLACK
