--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ jobs:
           destination: serenity
 
       - aws-s3/copy:
+          arguments: --recursive
           from: target/site/serenity
           to: 's3://serenity-bdd-report'
 
