--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -1,16 +1,14 @@
 pipeline {
     agent {
         any {
-            image 'markhobson/maven-chrome'
+            image 'maven:3.8.1-adoptopenjdk-11'
         }
     }
     stages {
         stage('Build') {
             steps {
                 echo sh(returnStdout: true, script: 'env')
-                 withMaven {
-                      sh "mvn clean verify"
-                 }
+                sh "mvn clean verify"
             }
 
              post { always {
