--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent {
         docker {
-            image 'markhobson/maven-chrome'
+            image 'markhobson/maven-chrome:jdk-8'
         }
     }
 
