--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -2,8 +2,11 @@ pipeline {
     agent {
         docker {
             image 'maven:3.8.1-openjdk-8'
-
+            args '-v $HOME/.m2:/root/.m2'
         }
+    }
+    tools {
+        docker "docker"
     }
 
     stages {
