--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         }
     }
     tools {
-        'org.jenkinsci.plugins.docker.commons.tools.DockerTool 'docker'
+        'org.jenkinsci.plugins.docker.commons.tools.DockerTool' 'docker'
     }
 
     stages {
