--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -12,6 +12,8 @@ pipeline {
     stages {
         stage('Build') {
             steps {
+                def dockerHome = tool 'docker'
+                env.PATH = "${dockerHome}/bin:${env.PATH}"
                 echo sh(returnStdout: true, script: 'env')
                 sh "docker run --rm -d -p 4444:4444 -v /dev/shm:/dev/shm selenium/standalone-chrome:4.0.0-rc-1-prerelease-20210618"
                 sh "mvn clean verify -Dproperties=`pwd`/serenity.remote.properties"
