--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent {
         docker {
             image 'maven:3.8.1-openjdk-8'
-            args '-v $HOME/.m2:/root/.m2'
+            args '-v $HOME/.m2:/root/.m2 --net=jenkins'
         }
     }
 
@@ -10,7 +10,6 @@ pipeline {
         stage('Build') {
             steps {
                 echo sh(returnStdout: true, script: 'env')
-                sh "wget http://google.com"
                 sh "wget http://0.0.0.0:4444/wd/hub"
                 sh "mvn clean verify -Dproperties=`pwd`/serenity.remote.properties"
             }
