--- a/serenity.remote.properties
+++ b/serenity.remote.properties
@@ -7,5 +7,5 @@ serenity.logging=VERBOSE
 serenity.console.headings=normal
 
 webdriver.driver = remote
-webdriver.remote.url = http://localhost:4444/wd/hub
+webdriver.remote.url = http://172.18.0.4:4444/wd/hub
 webdriver.remote.driver = chrome
