--- a/src/react/package.json
+++ b/src/react/package.json
@@ -12,6 +12,7 @@
     "react-colorful": "5.5.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-flow-renderer": "^9.7.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
