--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.36.0.3</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -111,13 +117,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>3.1.0</version>
-          <configuration>
-              <filesets>
-                  <fileset>
-                      <directory>docs</directory>
-                  </fileset>
-              </filesets>
-          </configuration>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>docs</directory>
+                        </fileset>
+                    </filesets>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
