--- a/src/test/resources/reportportal.properties
+++ b/src/test/resources/reportportal.properties
@@ -1,15 +1,16 @@
 rp.endpoint = http://localhost:8080
-rp.uuid = aed68ae4-6062-48eb-a850-86cb04b5e145
-rp.launch = default_TEST_EXAMPLE
-rp.project = serenitypoc
+# rebuilding with docker creates a new access token -.-
+rp.uuid = 4f9fd96d-3f8f-4846-90ca-11ce434208f2
+rp.launch = serenity POC
+rp.project = default_personal
 
 # optional
-rp.enable = true
-rp.description = My awesome launch
-rp.attributes = key:value; value;
-rp.convertimage = true
-rp.mode = DEFAULT
-rp.skipped.issue = true
-rp.batch.size.logs = 20
-rp.keystore.resource = <PATH_TO_YOUR_KEYSTORE>
-rp.keystore.password = <PASSWORD_OF_YOUR_KEYSTORE>
+#rp.enable = true
+#rp.description = My awesome launch
+#rp.attributes = key:value; value;
+#rp.convertimage = true
+#rp.mode = DEFAULT
+#rp.skipped.issue = true
+#rp.batch.size.logs = 20
+#rp.keystore.resource = <PATH_TO_YOUR_KEYSTORE>
+#rp.keystore.password = <PASSWORD_OF_YOUR_KEYSTORE>
