try uploading to bucket

--- a/.google/cloudbuild.yaml
+++ b/.google/cloudbuild.yaml
@@ -1,19 +1,13 @@
 steps:
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args:
-      - 'run'
-      - 'deploy'
-      - 'grid'
-      - '--image'
-      - 'selenium/standalone-chrome:98.0-chromedriver-98.0-grid-4.1.2-20220208'
-      - '--region'
-      - 'europe-west3'
-      - '--platform'
-      - 'managed'
-      - '--allow-unauthenticated'
-      - '--max-instances'
-      - '1'
-
   - name: maven:3-jdk-8
-    entrypoint: mvn
-    args: ['compile']
+    entrypoint: bash
+    args: ['mvn verify || true']
+
+  - name: 'gcr.io/cloud-builders/gsutil'
+    args: ['cp','-r','./target/site/serenity','gs://example-3926-bucket']
+
+# different way of doing artifacts
+# artifacts:
+#   objects:
+#     location: 'gs://example-3926-bucket/'
+#     paths: ['./target/site/serenity']
