--- a/.google/cloudbuild.yaml
+++ b/.google/cloudbuild.yaml
@@ -1,10 +1,15 @@
 steps:
-  - name: maven:3-jdk-8
-    entrypoint: bash
-    args: ['mvn verify || true']
+  - name: 'gcr.io/cloud-builders/mvn'
+    entrypoint: 'bash'
+    args: ['mvn verify || touch /workspace/.fail']
 
   - name: 'gcr.io/cloud-builders/gsutil'
     args: ['cp','-r','./target/site/serenity','gs://example-3926-bucket']
+
+  - id: check if failed
+    name: 'gcr.io/cloud-builders/mvn'
+    entrypoint: 'bash'
+    args: ["if [[ -f /workspace/.fail ]]; then exit 1 fi"]
 
 # different way of doing artifacts
 # artifacts:
