--- a/src/test/resources/reportportal.properties
+++ b/src/test/resources/reportportal.properties
@@ -1,11 +1,10 @@
-rp.endpoint = http://localhost:8080
+rp.endpoint=http://localhost:8080
 # rebuilding with docker creates a new access token -.-
-rp.uuid = 4f9fd96d-3f8f-4846-90ca-11ce434208f2
-rp.launch = serenity POC
-rp.project = default_personal
-
+rp.uuid=4f9fd96d-3f8f-4846-90ca-11ce434208f2
+rp.launch=serenity POC
+rp.project=default_personal
 # optional
-#rp.enable = true
+rp.enable=false
 #rp.description = My awesome launch
 #rp.attributes = key:value; value;
 #rp.convertimage = true
