test if trigger is invoked

--- a/.google/cloudbuild.yaml
+++ b/.google/cloudbuild.yaml
@@ -1,50 +1,50 @@
 steps:
-  #  - id: list all files
-  #    name: 'gcr.io/cloud-builders/mvn'
-  #    entrypoint: 'bash'
-  #    args:
-  #      - '-c'
-  #      - |
-  #        find .
-
-  - id: run minimal test, remember result, fail fast if no serenity test ran
+  - id: list all files
     name: 'gcr.io/cloud-builders/mvn'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        mvn verify -Dit.test=com.example.e2e.hello.HelloWorldIT || touch .fail && if test ! -e target/site/serenity; then exit 1; fi
-
-  #- id: run full suite
-  #  name: 'gcr.io/cloud-builders/mvn'
-  #  entrypoint: 'bash'
-  #  args:
-  #    - '-c'
-  #    - |
-  #      mvn verify || touch .fail && if test ! -e target/site/serenity; then exit 1; fi
-
-  - id: cleanup 2.8k files 🤯
-    name: 'gcr.io/cloud-builders/mvn'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        rm -rf target/site/serenity/icons target/site/serenity/bootstrap-icons
-
-
-  # FIXME clean up old files
-  - id: copy report to bucket
-    name: 'gcr.io/cloud-builders/gsutil'
-    args: [ '-m', 'cp','-r','./target/site/serenity','gs://example-3926-bucket' ]
-
-  - id: if failed exit with failure status
-    name: 'gcr.io/cloud-builders/mvn'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        if [[ -f .fail ]]; then exit 1; fi
-
+        find .
+#
+#  - id: run minimal test, remember result, fail fast if no serenity test ran
+#    name: 'gcr.io/cloud-builders/mvn'
+#    entrypoint: 'bash'
+#    args:
+#      - '-c'
+#      - |
+#        mvn verify -Dit.test=com.example.e2e.hello.HelloWorldIT || touch .fail && if test ! -e target/site/serenity; then exit 1; fi
+#
+#  #- id: run full suite
+#  #  name: 'gcr.io/cloud-builders/mvn'
+#  #  entrypoint: 'bash'
+#  #  args:
+#  #    - '-c'
+#  #    - |
+#  #      mvn verify || touch .fail && if test ! -e target/site/serenity; then exit 1; fi
+#
+#  - id: cleanup 2.8k files 🤯
+#    name: 'gcr.io/cloud-builders/mvn'
+#    entrypoint: 'bash'
+#    args:
+#      - '-c'
+#      - |
+#        rm -rf target/site/serenity/icons target/site/serenity/bootstrap-icons
+#
+#
+#  # FIXME clean up old files
+#  - id: copy report to bucket
+#    name: 'gcr.io/cloud-builders/gsutil'
+#    args: [ '-m', 'cp','-r','./target/site/serenity','gs://example-3926-bucket' ]
+#
+#  - id: if failed exit with failure status
+#    name: 'gcr.io/cloud-builders/mvn'
+#    entrypoint: 'bash'
+#    args:
+#      - '-c'
+#      - |
+#        if [[ -f .fail ]]; then exit 1; fi
+#
 # FIXME cache .m2 in a bucket
 
 # different way of doing artifacts
